<resources>
    <string name="app_name">pemGami</string>
    <string name="no_user">No User</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_wg">Want to create a new WG? Create</string>
    <string name="find_wg">Find your WG</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_wg_btn">Create WG</string>
    <string name="flat_name">Flat Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">pemGami</string>
    <string name="nav_header_subtitle">default usr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wg_created">Gratulations, your WG %1$s has been created</string>
    <string name="share_code_text">Share this code with your fellow flatmates</string>
    <string name="copy">Copy</string>
    <string name="found_wg">Hurray, found WG named: %1s \nDo you like to join it as: %2s?</string>
    <string name="no_wg">Sadly, no WG with this ID found</string>
    <string name="debug_logout">Logout</string>
    <string name="debug_clear_sharedpreferences">Debug Clear SharedPreferences and Logout</string>
    <string name="title_activity_work_plan">WorkPlanActivity</string>
    <string name="work_plan">Work Plan</string>
    <string name="settings">Settings</string>
    <string name="change_usr">Please enter new username</string>


    <string name="winner_excitement1">And this month\'s winner is?</string>
    <string name="winner_excitement2">From the %1s</string>
    <string name="time_in_mins">Time (in mins)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="who">Who?</string>
    <string name="points">%1s Points</string>
    <string name="points_for">%1s Points for %2s </string>
    <string name="save">Save</string>
    <string name="task">Task</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="default_times">Einmalig</string>
    <string name="rotation">Rotation?</string>
    <string name="error_input_params">Failed to save, check your Input Parameters again</string>
    <string name="success_input_params">Success, added Tasks </string>
    <string name="earned_points">Gratulations earned %1s Points!</string>
    <string name="really_delete">Really want to ignore this Task?</string>
    <string name="delete_desc">If you ignore this Task, you get 0 Points for it.</string>
    <string name="really_done">Do not disappoint your flat mates!</string>
    <string name="done_desc">Only mark this task done if you have finished it thoroughly.</string>
    <string name="highscore">%1s Highscore</string>
    <string name="score_rank">%1s. %2s : %3s Points</string>
    <string name="gambling">Gambling</string>
    <string name="gamb_startNewGame">New Game</string>
    <string name="gambl_submitbet">Submit Bet</string>
    <string name="gambl_raise">Raise!</string>
    <string name="gambl_stay">Stay</string>
    <string name="gambl_nextRound">Next Round!</string>
    <string name="gambl_buySwitch">Buy Switch</string>
    <string name="gambl_placeYourBets">Select a card and place your bet!!</string>
    <string name="gambl_stayOrSwitch">Stay or double bet to switch card!!</string>
    <string name="gambl_jackpotTitle">WG JACKPOT:</string>
    <string name="rankings">Rankings</string>
    <string name="home">Home</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="gamb_rules">Rules:</string>
    <string name="gamb_gambleText">GAMBLE!!</string>
    <string name="gamb_rulebook">
        1. Jackpot when trips\n\n
        2. Highcard wins unless pair appears\n\n
        3. Low card wins if high pair appears
    </string>
    <string name="gamb_noPoints">No points to gamble with.</string>
    <string name="gambl_playerpoints">Points: %d</string>
    <string name="gambl_quit">Quit</string>
    <string name="loser_text_description">You lose...</string>
    <string name="jackpot_text_description">JACKPOT!!!!</string>
    <string name="winner_text_description">YOU WIN!!!</string>
    <string name="how_about_working">Huow about doing some work? Just saying....</string>
    <string name="no_done_tasks">No Tasks done yet .. Better to do some work ;-)</string>
    <string name="no_tasks_created_yet_better_create_some">No Tasks created yet, better create some ;-)</string>
    <!-- String Array Constants -->
    <string-array name="taskTimes">
        <item>One Time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="really_leave">Are you sure you want to leave?</string>
    <string name="leave_desc">Once you leave you will no longer be part of %1s</string>
    <string name="share_id">Share ID with new members:</string>
    <string name="username">Username:</string>
    <string name="leave">Leave</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>

</resources>
